# bootcamp-python

./: README.md  main.py  pyproject.toml
aula01/: desafio.py
aula02/: back_end.py
aula03/: exercicios.py
aula04/: back_end.py  desafio.py  exercices.py
aula07/: pipeline.py
aula07/db/: report.csv
aula08/: decorators.py  etl.py  pipeline.py  schema.py
aula08/db/results/: output.csv  output.json
aula11_12/: example.csv  poo.py  use_poo.py
aula13_14/: README.md
aula13_14/src/: main.py
aula13_14/src/lib/classes/: csv_source.py  files_source.py  txt_source.py
