[project]
name = "jornada-de-dados"
version = "0.1.0"
description = "Projeto de Estudos do curso Jornada de Dados"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandera>=0.23.1",
    "pyarrow>=20.0.0",
]
